# bluer

./: .gitmodules  CHANGELOG.md  CONTRIBUTORS  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  build.rs  rustfmt.toml
.github/workflows/: create_release.yml  rust-clippy.yml  rust.yml
.misc/: sync.sh
blez/: Cargo.toml  README.md
blez-tools/: Cargo.toml  README.md
blez-tools/src/: blemon.rs  gattcat.rs
blez/examples/: gatt_server_cb.rs  l2cap_client.rs  le_advertise.rs
blez/src/: adapter.rs  adv.rs  agent.rs  lib.rs  session.rs
blez/src/gatt/: local.rs
blez/src/l2cap/: mod.rs
bluer/: CHANGELOG.md  Cargo.toml  README.md  build.rs  service_class_uuids.json
bluer-tools/: CHANGELOG.md  Cargo.toml  README.md
bluer-tools/src/: blemon.rs  bluadv.rs  blumon.rs  gattcat.rs  l2cat.rs  rfcat.rs
bluer/examples/: discover_devices.rs  gatt_client.rs  gatt_echo.inc  gatt_echo_client.rs  gatt_echo_server.rs  gatt_server_cb.rs  gatt_server_io.rs  l2cap.inc  l2cap_client.rs  l2cap_server.rs  le_advertise.rs  le_passive_scan.rs  list_adapters.rs  mesh_provisioner.rs  mesh_sensor_client.rs  mesh_sensor_client.rs.disabled  mesh_sensor_server.rs  rfcomm.inc  rfcomm_client.rs  rfcomm_server.rs
bluer/examples/meshd/: Dockerfile
bluer/examples/meshd/develop/: btm.service
bluer/examples/meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/net_keys/: 000
bluer/meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/app_keys/: 000
bluer/meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/dev_keys/: 00bc
bluer/meshd/lib/b67cef0dd1b2451fa54f8d34edba371b/rpl/00000000/: 00b3  00bb
bluer/meshd/lib/fc7ab6b2719e48a69cf00a4a921d08ca/rpl/00000000/: 00ba
bluer/src/: adapter.rs  adv.rs  agent.rs  device.rs  id.rs  l2cap.rs  lib.rs  monitor.rs  session.rs  sock.rs  stream_util.rs  sys.rs  uuid_ext.rs
bluer/src/gatt/: local.rs  mod.rs  remote.rs
bluer/src/l2cap/: mod.rs  stream.rs
bluer/src/mesh/: agent.rs  application.rs  element.rs  management.rs  mod.rs  network.rs  node.rs  provisioner.rs  types.rs
bluer/src/profile/: mod.rs  stream.rs
bluer/src/rfcomm/: mod.rs  profile.rs
doc/meshd-example/: README.md  run_meshd.sh
doc/meshd-example/config/: config_db.json
doc/meshd-example/lib/4c3c475ffb874d619536af3228552912/: node.json
doc/meshd-example/lib/4c3c475ffb874d619536af3228552912/rpl/00000000/: 0001
doc/meshd-example/lib/b67cef0dd1b2451fa54f8d34edba371b/: node.json
doc/meshd-example/lib/b67cef0dd1b2451fa54f8d34edba371b/dev_keys/: 0001  00ba
doc/meshd-example/lib/b67cef0dd1b2451fa54f8d34edba371b/rpl/00000000/: 00aa  00ac  00ba  00bc
doc/meshd-example/lib/fc7ab6b2719e48a69cf00a4a921d08ca/: node.json
doc/meshd-example/lib/fc7ab6b2719e48a69cf00a4a921d08ca/rpl/00000000/: 0001
examples/: blemon.rs  charcat.rs  device_monitor.rs  discover_devices.rs  gatt.inc  gatt_client.rs  gatt_echo_client.rs  gatt_echo_server.rs  gatt_server.rs  gatt_server_cb.rs  gatt_server_io.rs  gattcat.rs  l2cap.inc  l2cap_client.rs  l2cap_server.rs  l2cat.rs  le_advertise.rs  list_adapters.rs  test.rs  test2.rs  test3.rs  test4.rs  test5.rs  test6.rs  test_advertising.rs
old_examples/: test5.rs  test_advertising.rs
src/: adapter.rs  adv.rs  advertising.rs  bluetooth_adapter.rs  bluetooth_device.rs  bluetooth_discovery_session.rs  bluetooth_event.rs  bluetooth_gatt_characteristic.rs  bluetooth_gatt_descriptor.rs  bluetooth_gatt_service.rs  bluetooth_le_advertising_data.rs  bluetooth_le_advertising_manager.rs  bluetooth_obex.rs  bluetooth_session.rs  bluetooth_utils.rs  device.rs  id.rs  l2cap.rs  lib.rs  session.rs
src/gatt/: local.rs  mod.rs  remote.rs
src/l2cap/: mod.rs  stream.rs
