[package]
name = "blez-tools"
version = "0.9.5"
description = "Bluetooth LE tools: swiss army knife for GATT services and L2CAP sockets on Linux."
readme = "README.md"
authors = ["Sebastian Urban <surban@surban.net>"]
repository = "https://github.com/surban/blez"
keywords = ["bluetooth", "bluez", "ble", "gatt", "l2cap"]
categories = ["hardware-support", "command-line-utilities"]
license = "BSD-2-Clause"
edition = "2018"

[[bin]]
name = "blemon"
path = "src/blemon.rs"

[[bin]]
name = "gattcat"
path = "src/gattcat.rs"

[[bin]]
name = "l2cat"
path = "src/l2cat.rs"

[dependencies]
blez = { version = "0.9.5", path = "../blez" }
futures = "0.3"
tokio = { version = "1", features = ["io-std", "io-util", "process", "rt-multi-thread"] }
clap = "3.0.0-beta.2"
crossterm = "0.20"
tab-pty-process = "0.2"
tokio-compat-02 = "0.2"
pretty-hex = "0.2"
bytes = "1"
env_logger = "0.8"
libc = "0.2"
log = "0.4"
hex = { version = "0.4" }
