[package]
name = "blez"
version = "0.9.4"
description = "Asynchronous interface to official Bluetooth Low Energy APIs on Linux (BlueZ). Supports device discovery, events, local and remote GATT services, advertisements and L2CAP sockets."
readme = "README.md"
authors = [
    "Sebastian Urban <surban@surban.net>",
    "Attila Dusnoki <adusnoki@inf.u-szeged.hu>",
    "Ben Stern <bstern@fortian.com>",
]
repository = "https://github.com/surban/blez"
keywords = ["bluetooth", "bluez", "ble", "gatt", "l2cap"]
categories = ["asynchronous", "hardware-support", "os::linux-apis"]
license = "BSD-2-Clause"
edition = "2018"
exclude = [
    "bluetooth-numbers-database/README.md",
    "bluetooth-numbers-database/*.png",
    "bluetooth-numbers-database/*.js",
    "bluetooth-numbers-database/*.json",
    "bluetooth-numbers-database/node_modules/*",
]

[features]
default = ["bluetoothd", "l2cap"]
bluetoothd = ["dbus", "dbus-tokio", "dbus-crossroads", "pin-project", 
              "tokio/rt", "tokio/sync", "tokio/macros", "tokio-stream",
              "lazy_static", "custom_debug", "displaydoc"]
l2cap = ["libbluetooth"]

[dependencies]
libbluetooth = { version = "0.1", optional = true }
dbus = { version = "0.9", features = ["futures"], optional = true }
dbus-tokio = { version = "0.7",  optional = true }
dbus-crossroads = { version = "0.3",  optional = true }
futures = "0.3"
pin-project = { version = "1", optional = true }
tokio = { version = "1", features = ["net"] }
tokio-stream = { version = "0.1",  optional = true }
hex = { version = "0.4" }
lazy_static = { version = "1",  optional = true }
uuid = { version = "0.8", features = ["v4"] }
strum = { version = "0.21", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.3"
libc = "0.2"
custom_debug = { version = "0.5", optional = true }
displaydoc = { version = "0.2", optional = true}
log = "0.4"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread"] }
env_logger = "0.8"
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
