[package]
name = "bluer-tools"
version = "0.14.1"
description = "BlueR tools: swiss army knife for GATT services, L2CAP and RFCOMM sockets on Linux"
readme = "README.md"
authors = ["Sebastian Urban <surban@surban.net>", "BlueR contributors"]
repository = "https://github.com/bluez/bluer"
keywords = ["bluetooth", "bluez", "gatt", "l2cap", "rfcomm"]
categories = ["hardware-support", "command-line-utilities"]
license = "BSD-2-Clause"
edition = "2021"

[[bin]]
name = "blumon"
path = "src/blumon.rs"

[[bin]]
name = "gattcat"
path = "src/gattcat.rs"

[[bin]]
name = "l2cat"
path = "src/l2cat.rs"

[[bin]]
name = "rfcat"
path = "src/rfcat.rs"

[dependencies]
bluer = { version = "0.15.1", path = "../bluer", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "process",
    "rt-multi-thread",
] }
clap = { version = "3", features = ["derive"] }
crossterm = "0.25"
tab-pty-process = "0.2"
tokio-compat-02 = "0.2"
pretty-hex = "0.3"
bytes = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
hex = { version = "0.4" }
rand = "0.8"
