[package]
name = "bluer-tools"
version = "0.17.1"
description = "BlueR tools: swiss army knife for GATT services, L2CAP and RFCOMM sockets on Linux"
readme = "README.md"
authors = ["Sebastian Urban <surban@surban.net>", "BlueR contributors"]
repository = "https://github.com/bluez/bluer"
keywords = ["bluetooth", "bluez", "gatt", "l2cap", "rfcomm"]
categories = ["hardware-support", "command-line-utilities"]
license = "BSD-2-Clause"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "bluadv"
path = "src/bluadv.rs"

[[bin]]
name = "blumon"
path = "src/blumon.rs"

[[bin]]
name = "gattcat"
path = "src/gattcat.rs"

[[bin]]
name = "l2cat"
path = "src/l2cat.rs"

[[bin]]
name = "rfcat"
path = "src/rfcat.rs"

[dependencies]
bluer = { version = "0.17.1", path = "../bluer", features = ["full"] }

futures = "0.3"
tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "process",
    "rt-multi-thread",
    "signal",
] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
tab-pty-process = "0.2"
tokio-compat-02 = "0.2"
pretty-hex = "0.4"
bytes = "1"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
hex = { version = "0.4" }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-jsonlines = { version = "0.5.0", features = ["async"] }
structopt = { version = "0.3", default-features = false }
regex = "1"

